@@ -430,6 +430,8 @@ Angel Carpintero
    * Fixed FFV1 codec encode with ffmpeg.
      http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x04x13x032553
    * No PQfinish().
+   * Added a conditional check for avformat_alloc_context , av_avformat_alloc_context to fix
+     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x10x05x071936
  
 Jared D
    * Change bayer2rgb24() to fix a problem with sn9c102 driver
